Fixed vertical align on playlist items.

--- a/css/streams.css
+++ b/css/streams.css
@@ -612,3 +612,7 @@ legend, .legend {
 .muted {
     color:gray;
 }
+
+img.playlist-albumart {
+    vertical-align:middle;
+}
